--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Weather App for UD811">
   <title>Weather</title>
-  <!-- Insert link to stylesheet here -->
+  <link rel="stylesheet" href="styles/ud811.css">
 </head>
 <body>
 
@@ -141,8 +141,7 @@
       <circle id="ud811Spinner" cx="16" cy="16" r="14" fill="none"></circle>
     </svg>
   </div>
-
-  <!-- Insert link to app.js here -->
+  <script src="scripts/app.js"></script>
   
 </body>
 </html>
