fix: Update to localforage minified

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </svg>
   </div>
   <script src="scripts/app.js"></script>
-  <script src="node_modules/localforage/dist/localforage.js"></script>
+  <script src="node_modules/localforage/dist/localforage.min.js"></script>
   
 </body>
 </html>
