fix: Update localforage link source

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </svg>
   </div>
   <script src="scripts/app.js"></script>
-  <script src="node_modules/localforage/dist/localforage.min.js"></script>
+  <script src="scripts/localforage.min.js"></script>
   
 </body>
 </html>
