--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#2F3BA2">
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Weather">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/icons/apple-60.png">
   <link rel="apple-touch-icon" sizes="76x76" href="/images/icons/apple-76.png">
